implementing feature to display user bookmarks on ui